[package]
name = "cellar"
version = "1.0.2"
edition = "2021"

[lib]
name = "cellar"
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
debug = "limited"

[dependencies]
log = "0.4"
once_cell = "1.19"
fnv = "1.0"
widestring = "1.1"
cstr = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windebug_logger = "0.1"
minhook = "0.5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.54"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation"
]
